--- a/package.json
+++ b/package.json
@@ -1,20 +1,62 @@
 {
   "name": "doc",
   "version": "1.0.0",
+  "license": "MIT",
   "type": "module",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "docs:dev": "pnpm run register:components && vitepress dev docs",
     "docs:build": "pnpm run register:components && cross-env BASE=/vitepress-demo/ vitepress build docs",
+    "docs:dev": "pnpm run register:components && vitepress dev docs",
     "docs:serve": "vitepress serve docs",
-    "register:components": "vitepress-rc"
+    "lint:lint-staged": "lint-staged",
+    "register:components": "vitepress-rc",
+    "start": "npm install -g commitizen && pnpm i && husky install"
   },
-  "dependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "package.json": [
+      "sort-package-json"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
+  },
+  "dependencies": {
+    "ant-design-vue": "^3.2.15",
+    "lodash-es": "^4.17.21",
+    "vue": "^3.2.45"
+  },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "@typescript-eslint/eslint-plugin": "~5.47.1",
+    "@typescript-eslint/parser": "~5.47.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/tsconfig": "^0.1.3",
+    "commitizen": "~4.2.6",
+    "conventional-changelog-cli": "~2.2.2",
     "cross-env": "^7.0.3",
+    "cz-customizable": "^7.0.0",
+    "eslint": "^8.31.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "prettier": "^2.8.2",
+    "sort-package-json": "^2.1.0",
+    "standard-version": "^9.5.0",
+    "typescript": "~4.9.4",
     "vitepress": "^1.0.0-alpha.35",
     "vitepress-theme-demoblock": "^2.0.2"
   },
