chore: commit lint

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "doc",
   "version": "1.0.0",
   "license": "MIT",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "docs:build": "pnpm run register:components && cross-env BASE=/vitepress-demo/ vitepress build docs",
@@ -19,10 +18,6 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
     "package.json": [
       "sort-package-json"
     ]
@@ -38,6 +33,8 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
     "@types/lodash-es": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "~5.47.1",
     "@typescript-eslint/parser": "~5.47.1",
@@ -53,6 +50,7 @@
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.3",
     "less": "^4.1.3",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "sort-package-json": "^2.1.0",
     "standard-version": "^9.5.0",
