--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
+printWidth: 120
+tabWidth: 2
+tabs: false
 semi: false
 singleQuote: true
-printWidth: 80
+quoteProps: 'as-needed'
+bracketSpacing: true
+jsxBracketSameLine: false
+arrowParens: 'always'
+endOfLine: 'auto'
+trailingComma: 'none'
