--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.15",
     "lodash-es": "^4.17.21",
-    "vue": "^3.2.45"
+    "vue": "3.2.44"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.0",
@@ -56,7 +56,7 @@
     "sort-package-json": "^2.1.0",
     "standard-version": "^9.5.0",
     "typescript": "~4.9.4",
-    "vitepress": "^1.0.0-alpha.35",
+    "vitepress": "1.0.0-alpha.30",
     "vitepress-theme-demoblock": "^2.0.2"
   },
   "engines": {
